cmake_minimum_required(VERSION 3.26)
project(Baekjoon)

set(CMAKE_CXX_STANDARD 17)

add_executable(Baekjoon
#        1920.cpp
#        DS.cpp
#        5086.cpp
#        9506.cpp
#        1085.cpp
#        3009.cpp
#        11501.cpp
#        11047.cpp
#        2217.cpp
#        1026.cpp
#        11399.cpp
#        2847.cpp
#        1439.cpp
#        1931.cpp
#        15903.cpp
#        1247.cpp
#        15686.cpp
#        2167.cpp
#        1541.cpp
#        1926.cpp
#        2178.cpp
#        2010.cpp
#        7576.cpp
        BOJ/1697.cpp
        #        1149.cpp
)
