cmake_minimum_required(VERSION 3.26)
project(Baekjoon)

set(CMAKE_CXX_STANDARD 17)

add_executable(Baekjoon
#        BOJ/bruteForce/1107.cpp
#        BOJ/simulation/15662.cpp
#        BOJ/greedy/2212.cpp
#        BOJ/unclassified/1271.cpp
#        BOJ/BFS&DFS/10026.cpp
#        BOJ/BFS&DFS/7562.cpp
#        BOJ/unclassified/2475.cpp
#        BOJ/unclassified/2741.cpp
#        BOJ/BFS&DFS/1012.cpp
#        BOJ/dp/1256.cpp
#        BOJ/greedy/11000.cpp
#        BOJ/greedy/2170.cpp
#        BOJ/dp/2293.cpp
#        BOJ/dp/9251.cpp
#        BOJ/greedy/1715.cpp
#        BOJ/greedy/2457.cpp
#        BOJ/BFS&DFS/7569.cpp
#        BOJ/BFS&DFS/16236.cpp
#        BOJ/dp/1003.cpp
#        BOJ/dataStructure/10816.cpp
#        BOJ/sorting/1764.cpp
#        BOJ/BFS&DFS/2606.cpp
#        BOJ/string/1032.cpp
#        BOJ/math/1037.cpp
#        BOJ/unclassified/1076.cpp
#        BOJ/string/1100.cpp
#        BOJ/bruteForce/1145.cpp
#        BOJ/string/1159.cpp
#        BOJ/binarySearch/1654.cpp
#        BOJ/math/1010.cpp
#        BOJ/math/1094.cpp
#        BOJ/math/1312.cpp
#        BOJ/sorting/1015.cpp
#        BOJ/math/1016.cpp
#        BOJ/math/1292.cpp
#        BOJ/bruteForce/1018.cpp
#        BOJ/unclassified/2742.cpp
#        BOJ/sorting/10817.cpp
#        BOJ/unclassified/7287.cpp
#        BOJ/math/2609.cpp
#        BOJ/binarySearch/1300.cpp
#        BOJ/unclassified/2920.cpp
#        BOJ/BFS&DFS/1260.cpp
#        BOJ/BFS&DFS/2667.cpp
#        BOJ/dp/11726.cpp
        BOJ/unclassified/1259.cpp
        #        BOJ/greedy/2785.cpp
#        BOJ/greedy/1789.cpp
        #        BOJ/BFS&DFS/7569_notmine.cpp
#        BOJ/dp/2011.cpp
#        BOJ/BFS&DFS/1697.cpp

)
